# eagle-eye

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: index.html
include/: anatomy.h  c3d_loader.h  csv_writer.h  filter.h  ground_truth.h  kinematics.h  obp_markers.h  signal_processing.h
scripts/: plot_markers.py
src/: batch_processor.cpp  c3d_loader.cpp  csv_writer.cpp  filter.cpp  ground_truth.cpp  idk.code-workspace  kinematics.cpp  main.cpp  signal.cpp  tempCodeRunnerFile.cpp
tests/: test_kinematics.cpp
